@@ -42,18 +42,23 @@ utoa(char *p, char *e, unsigned int x)
 static VALUE
 printf_test_call(int argc, VALUE *argv, VALUE self)
 {
-    VALUE opt, type, num;
+    VALUE opt, type, num, result;
     char format[sizeof(int) * 6 + 8], *p = format, cnv;
     int n;
+    const char *s;
 
     rb_scan_args(argc, argv, "2:", &type, &num, &opt);
     Check_Type(type, T_STRING);
     if (RSTRING_LEN(type) != 1) rb_raise(rb_eArgError, "wrong length(%ld)", RSTRING_LEN(type));
     switch (cnv = RSTRING_PTR(type)[0]) {
-      case 'd': case 'x': case 'o': case 'X': break;
+      case 'd': case 'x': case 'o': case 'X':
+	n = NUM2INT(num);
+	break;
+      case 's':
+	s = StringValueCStr(num);
+	break;
       default: rb_raise(rb_eArgError, "wrong conversion(%c)", cnv);
     }
-    n = NUM2INT(num);
     *p++ = '%';
     if (!NIL_P(opt)) {
 	VALUE v;
@@ -84,8 +89,13 @@ printf_test_call(int argc, VALUE *argv, VALUE self)
     }
     *p++ = cnv;
     *p++ = '\0';
-    return rb_assoc_new(rb_enc_sprintf(rb_usascii_encoding(), format, n),
-			rb_usascii_str_new_cstr(format));
+    if (cnv == 's') {
+	result = rb_enc_sprintf(rb_usascii_encoding(), format, s);
+    }
+    else {
+	result = rb_enc_sprintf(rb_usascii_encoding(), format, n);
+    }
+    return rb_assoc_new(result, rb_usascii_str_new_cstr(format));
 }
 
 void
